--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>CV - Murilo Teshima</title>
+  <title>TESTE - Murilo Teshima</title>
 </head>
 
 <body>
