--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Murilo Teshima - Desenvolvedor Web e Consultor em Tecnologia">
     <meta property="og:description" content="Bem-vindo ao meu site pessoal onde compartilho meus projetos e conhecimentos em desenvolvimento web e consultoria em tecnologia.">
-    <meta property="og:image" content="https://muriloteshima.netlify.app/imagem-destaque.jpg">
+    <meta property="og:image" content="https://muriloteshima.netlify.app/_assets/pic_two.jpg">
     <meta property="og:url" content="https://muriloteshima.netlify.app/">
     <meta property="og:type" content="website">
     
