--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Murilo Teshima - Analista de Revenue Integrity | Consultor em Tecnologia | DevWeb">
-    <meta property="og:description" content="Bem-vindo ao meu site pessoal, onde compartilho meus projetos e minha trajetória pessoal e profissional.">
+    <meta property="og:description" content="Bem-vindo ao meu site pessoal, onde compartilho meus projetos minha trajetória pessoal e profissional.">
     <meta property="og:image" content="https://muriloteshima.netlify.app/_assets/pic_two.jpg">
     <meta property="og:url" content="https://muriloteshima.netlify.app/">
     <meta property="og:type" content="website">
