--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <title>Murilo Teshima</title>
 
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Murilo Teshima - Analista de Revenue Integrity | Consultor em Tecnologia | DevWeb">
+    <meta property="og:title" content="Murilo Teshima - Integrity Analyst | Consultor em Tecnologia">
     <meta property="og:description" content="Bem-vindo ao meu site pessoal, onde compartilho meus projetos minha trajetória pessoal e profissional.">
     <meta property="og:image" content="url(https://muriloteshima.netlify.app/_assets/pic_two.jpg)">
     <meta property="og:url" content="https://muriloteshima.netlify.app/">
