--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <meta property="og:title" content="Murilo Teshima - Integrity Analyst | Consultor em Tecnologia">
   <meta property="og:description"
     content="Bem-vindo ao meu site pessoal, onde compartilho meus projetos minha trajetória pessoal e profissional.">
-  <meta property="og:image" content="url(https://muriloteshima.netlify.app/_assets/pic_two.jpg)">
+  <meta property="og:image" content="https://muriloteshima.netlify.app/_assets/pic_two.jpg">
   <meta property="og:url" content="https://muriloteshima.netlify.app/">
   <meta property="og:type" content="website">
 
